Add option to disable completer, err on no db

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,6 +33,19 @@
       <item>
        <widget class="KListWidgetSearchLine" name="klistwidgetsearchline"/>
       </item>
+      <item>
+       <widget class="QCheckBox" name="checkBox">
+        <property name="text">
+         <string>cmpl</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+        <property name="tristate">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
