--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,7 +39,7 @@
          <string>cmpl</string>
         </property>
         <property name="checked">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="tristate">
          <bool>false</bool>
